--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,15 @@ next-env.d.ts
 # firebase
 firebase-debug.log
 firestore-debug.log
+
+# testing
+/coverage
+/playwright-report
+/test-results
+/.playwright
+
+# test artifacts
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
