--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "papaparse": "^5.5.3",
     "patch-package": "^8.0.0",
     "postcss-import": "^16.1.0",
+    "razorpay": "^2.9.6",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
